Add *.weba audio/webm MIME mapping.

Windows 10 now maps audio/webm to *.weba by default. This CL fixes a
test that change broken (MimeUtilTest.GetPreferredExtensionForMimeType),
and adds a secondary mapping for audio/webm to weba.

Bug: 923502
Change-Id: Ia2e3344c5bf270a6bcfe5154ce8a4e28285821fc
Reviewed-on: https://chromium-review.googlesource.com/c/1436939
Reviewed-by: Asanka Herath <asanka@chromium.org>
Commit-Queue: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#626104}
Former-commit-id: c3ce84e0f7aecb10811fd7aa374d92a2b57db46b